--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ stm32f4xx-hal = { version = "0.6.0", features = ["stm32f469"]}
 nb = "0.1.2"
 embedded-hal = "0.2.3"
 bitcoin_hashes = { version = "0.7.3", default-features = false }
+# secp256k1 = { version = "0.17.2", default-features = false, features = ['lowmemory'] }
 
 
 # this lets you use `cargo fix`!
